--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Carusel from '../components/Carusel.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -62,7 +63,7 @@ import Card from '../components/Card.astro';
 		</ul>
 	</main>
 </Layout>
-
+<Carusel/>
 <style>
 	main {
 		margin: auto;
